Fixing some of Robbie's breaks in read more

--- a/UI/Web/src/app/shared/read-more/read-more.component.scss
+++ b/UI/Web/src/app/shared/read-more/read-more.component.scss
@@ -8,8 +8,5 @@
 
   div {
     word-break: break-word;
-    width: 100%;
-    overflow: hidden;
-    max-height: 75px;
   }
 }
